--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ textarea {
 
 
 html {
-  background-color: #fff;
+  background-color: #fff8dc;
   height: 100%;
 }
 
@@ -106,6 +106,26 @@ body {
   padding: 2em;
   font-size: 1.25em;
   height: 100%;
+  background: #fff8dc;
+}
+
+.top-section {
+    border-bottom: crimson 3px solid;
+    margin-bottom: 1em;
+}
+
+.top-section p {
+    font-size: 1.35em;
+}
+
+.top-section span {
+    font-family: 'libre baskerville', serif;
+    font-weight: bold;
+    color: crimson;
+}
+
+h1 {
+    font-family: 'libre baskerville', serif;
 }
 
 .wrapper {
@@ -113,22 +133,53 @@ body {
   font-weight: 700;
   display: flex;
   justify-content: space-between;
+  border-bottom: crimson 3px solid;
+  padding-bottom: 1em;
+  margin-bottom: 1em;
 }
 
 .div-1, .div-2, .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  color: #fff;
+  color: cornsilk;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
+  font-size: 1.25em;
+  background-color: crimson;
   height: 300px;
   width: 30%;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-left: .25em;
+  padding-right: .25em;
 }
 
+.wrapper ul {
+    text-decoration: none;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
 
+.wrapper a {
+    color: cornsilk;
+    text-decoration: none;
+}
+
+.wrapper a:hover {
+    color: tomato;
+    -webkit-text-stroke: 1px cornsilk;
+    text-decoration: none;
+}
+
+footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.fab, .fas {
+    color: crimson;
+}
 
 
 /* ==========================================================================
